--- a/deno.json
+++ b/deno.json
@@ -5,8 +5,9 @@
     "build:12tet": "cd 12tet && deno run -A ./_build.ts",
     "build:irclogs": "cd irclogs && deno run -A ./_build.ts",
     "build:img": "cd img && deno run -A ./_build.ts",
+    "build:chords": "cd chords && deno run -A ./_build.ts",
     "build": {
-      "dependencies": ["build:hub", "build:12tet", "build:irclogs", "build:img"]
+      "dependencies": ["build:hub", "build:12tet", "build:irclogs", "build:img", "build:chords"]
     }
   },
   "imports": {
